// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jumbotron /> should render with center class 1`] = `
<div
  className="jumbotron -center"
>
  <h1
    className="jumbotron--title"
  >
    Theme Gallery
  </h1>
  <p
    className="jumbotron--lead"
  >
    <span>
      Developers deserve beautiful designs.
    </span>
    <br />
    <span>
      Find a theme. Let Jay do the rest.
    </span>
  </p>
  <p
    className="jumbotron--lead"
  >
    <GatsbyLink
      className="jumbotron--lead--action -primary"
      to="/hello"
    >
      hello world
    </GatsbyLink>
  </p>
</div>
`;

exports[`<Jumbotron /> should render without center class 1`] = `
<div
  className="jumbotron"
>
  <h1
    className="jumbotron--title"
  >
    Theme Gallery
  </h1>
  <p
    className="jumbotron--lead"
  >
    <span>
      Developers deserve beautiful designs.
    </span>
    <br />
    <span>
      Find a theme. Let Jay do the rest.
    </span>
  </p>
  <p
    className="jumbotron--lead"
  >
    <GatsbyLink
      className="jumbotron--lead--action -primary"
      to="/hello"
    >
      hello world
    </GatsbyLink>
  </p>
</div>
`;
